--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -6,6 +6,10 @@
 				"path": "./python.json"
 			},
 			{
+				"language": "html",
+				"path": "./html.json"
+			},
+			{
 				"language": "lua",
 				"path": "./lua.json"
 			},
