--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -6,17 +6,17 @@ import = [
 size = 16.0
 
 [font.bold]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "SF Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Regular"
