--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,17 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+bind-key C-0 select-pane -t 0
+bind-key C-1 select-pane -t 1
+bind-key C-2 select-pane -t 2
+bind-key C-3 select-pane -t 3
+bind-key C-4 select-pane -t 4
+bind-key C-5 select-pane -t 5
+bind-key C-6 select-pane -t 6
+bind-key C-7 select-pane -t 7
+bind-key C-8 select-pane -t 8
+bind-key C-9 select-pane -t 9
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
