--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,11 +25,17 @@ bind-key C-7 select-pane -t 7
 bind-key C-8 select-pane -t 8
 bind-key C-9 select-pane -t 9
 
+set -g @continuum-restore 'on'
+set -g @continuum-boot-options 'alacritty'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-fahrenheit false
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
